public/styles/nav.css
#nav-bar  {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-content: flex-start;
  height: 80px;
  width: 100%;
  background-color: #00a087;
  color: #e8fdff;
  padding: 0px 2em;
  margin-bottom: 0px
}

#nav-bar img {
  display:flex;
  align-items: center;
  width: 80px;
  height: 80px;
  margin-right: 10px;
}

#nav-bar .header {
  display: flex;
  float: left;
  font-size: 200%;
  align-items: center;
}

